--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "app",
+  "name": "boilerplate",
   "version": "0.0.0",
   "scripts": {
     "ng": "./node_modules/.bin/ng",
-    "start:app": "cd apps/app && ng serve",
+    "dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:app:dev\" \"npm run start:api:dev\"",
+    "start:app:dev": "cd apps/app && ng serve -o",
+    "start:app": "npm run build:app && http-server -p 8080 -c-1 dist/apps/app",
     "build:app": "cd apps/app && ng build",
     "watch:app": "cd apps/app && ng build --watch --configuration development",
     "test:app": "cd apps/app && ng test",
+    "build:api": "cd apps/api && nest build",
+    "start:api": "cd apps/api && nest start",
+    "start:api:dev": "cd apps/api && nest start --watch",
+    "start:api:debug": "cd apps/api && nest start --debug --watch",
+    "start:api:prod": "npm run build:api && node dist/api/main",
+    "test:api": "cd apps/api && jest",
+    "test:api:watch": "cd apps/api && jest --watch",
+    "test:api:cov": "cd apps/api && jest --coverage",
     "start": "start:app",
     "prebuild": "rimraf dist",
     "build": "build:app",
@@ -23,22 +33,49 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
-    "rxjs": "~7.4.0",
+    "@nestjs/axios": "0.0.7",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
+    "@nrwl/nx": "^7.8.7",
+    "concurrently": "^7.1.0",
+    "nestjs-redoc": "^2.2.2",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular-devkit/build-angular": "^13.3.4",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/jest": "27.4.1",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "jasmine-core": "~3.10.0",
+    "jest": "^27.2.5",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.5.2"
   }
 }
