:wrench: initial electron working

--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "test:api": "cd apps/api && jest",
     "test:api:watch": "cd apps/api && jest --watch",
     "test:api:cov": "cd apps/api && jest --coverage",
+    "start:desktop": "npm run build && electron dist/apps/desktop/main.js",
+    "build:desktop": "tsc --project apps/desktop && cp -R apps/desktop/assets dist/apps/desktop/assets",
     "start": "start:app",
     "prebuild": "rimraf dist",
-    "build": "build:app",
-    "watch": "watch:app",
+    "build": "npm run build:app && npm run build:api && npm run build:desktop",
     "test": "test:app"
   },
   "private": true,
@@ -40,6 +41,7 @@
     "@nestjs/swagger": "^5.2.1",
     "@nrwl/nx": "^7.8.7",
     "concurrently": "^7.1.0",
+    "electron": "^18.2.0",
     "nestjs-redoc": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
