--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.4",
+    "@nestjs/platform-ws": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/websockets": "^8.4.4",
     "@nrwl/nx": "^7.8.7",
     "concurrently": "^7.1.0",
     "electron": "^18.2.0",
